
Tue May 16 10:35:54 EDT 1995	Paul Park	(pjpark@mit.edu)
	* t_dbentry.c, t_ktentry.c - new test modules for encode/decode
		functions.  These convert to and from krb5_db_entry and
		krb5_keytab_entry and verify contents.
	* adm_kt_enc.c	- Fix bug encoding integer values.


Tue May 9 15:21:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* adm_conn.c	- use profile information to locate the admin_server.
			  Also, return the correct value from krb5_adm_connect
			  instead of always returning zero.
	* adm_{kw,kt}_{enc,dec}.c - New modules to [en/de]code administrative
			  protocol keyword=value pairs and keytab entries.


Fri Apr 28 09:47:29 EDT 1995	Paul Park	(pjpark@mit.edu)

	Create a new library consisting of functions which communicate with
	the administrative server here.  These modules replace the originals
	which used to be in libkrb5.

	adm_rw.c	- Remove ntohl/htonl in favor of byte blasting.
